<resources>
    <string name="app_name">Daily Update</string>
    <string name="home_title">Home</string>
    <string name="bookmarks_title">Bookmarks</string>
    <string name="github_title">GitHub</string>
    <string name="meetup_title">Meetup</string>
    <string name="event_details_title">Event Details</string>

    <string name="home_github_recyclerview_title">Trending on GitHub</string>
    <string name="home_meetup_recyclerview_title">Popular on Meetup</string>
    <string name="meetup_search_title">Meetup Search</string>
    <string name="github_search_title">GitHub Search</string>
    <string name="search_label">Search</string>
    <string name="preference_label">Search Preferences</string>
    <string name="bookmarks_label">Bookmarked Events</string>
    <string name="description_label">Description</string>
    <string name="delete_all_bookmarks_label">Delete All Bookmarks</string>

    <!-- Strings for the Search Dialog -->
    <string name="meetup_dialog_title">Event Search Options</string>
    <string name="github_dialog_title">Repository Search Options</string>
    <string name="cancel_label">Cancel</string>
    <string name="save_label">Save</string>
    <string name="dialog_keyword_label">Keyword(s):</string>
    <string name="dialog_keyword_hint">Input keywords</string>
    <string name="dialog_sort_label">Sort by:</string>
    <string name="dialog_sort_updated_label">Updated</string>
    <string name="dialog_sort_stars_label">Stars</string>
    <string name="dialog_sort_forks_label">Forks</string>
    <string name="dialog_sort_best_label">Recommendation</string>
    <string name="dialog_sort_time_label">Time</string>
    <string name="dialog_order_label">Order:</string>
    <string name="dialog_order_descending_label">Descending</string>
    <string name="dialog_order_ascending_label">Ascending</string>
    <string name="dialog_location_label">Location</string>
    <string name="dialog_location_hint">Input location</string>
    <string name="dialog_location_explanation">(If empty, current location will be used.)</string>

    <!-- String for the Meetup Details Dialog -->
    <string name="meetupevent_status_label">Status:\u0020</string>
    <string name="meetupgroup_members_label">\u0020members</string>
    <string name="meetupevent_attendees_label">\u0020member(s) going</string>
    <string name="meetupevent_waitlist_label">\u0020members on waitlist</string>
    <string name="meetupevent_places_left_label">\u0020places left</string>

    <string name="tools_repository_title">Repository Title</string>
    <string name="tools_repository_description">Description for the repository that might take two lines</string>
    <string name="tools_repository_language">Language</string>
    <string name="tools_repository_stars"># stars</string>
    <string name="tools_group_members"># members</string>
    <string name="tools_group_title">Group title</string>
    <string name="tools_event_date">Saturday, March 30</string>
    <string name="tools_event_title">Event title</string>
    <string name="tools_event_time">10:00AM</string>
    <string name="tools_event_status">Status</string>
    <string name="tools_event_attendees"># members going</string>
    <string name="tools_place_left">*** places left</string>
    <string name="tools_waitlist_count">*** members on waitlist</string>
    <string name="tools_address">*** Tower 14F, Shinjuku 0-00-0, Tokyo, Japan</string>
    <string name="tools_event_status_detail">Status: upcoming</string>
    <string name="tools_description">Description of the event that will probably take many lines</string>

    <string name="content_description_open_drawer">Drawer opened</string>
    <string name="content_description_close_drawer">Drawer closed</string>
    <string name="content_description_group_image">Group image</string>
    <string name="content_description_bookmark_icon">Bookmark icon</string>
    <string name="content_description_status_icon">Status icon</string>
    <string name="content_description_time_icon">Time icon</string>
    <string name="content_description_place_icon">Place icon</string>
    <string name="content_description_group_icon">Group icon</string>
    <string name="content_description_back_icon">Back icon</string>

    <string name="no_internet_connection">No internet connection available.</string>

    <string name="repository_no_description">(No description available.)</string>
    <string name="repository_no_language">(Language unknown.)</string>
    <string name="repository_stars_label">\u0020stars</string>

    <string name="location_not_retrieved">The location could not be retrieved. The default location will be Tokyo.</string>
    <string name="message_default_location">The default location will be Tokyo.</string>
    <string name="mainview_toast_empty_search">Please enter a topic of interest to set up the search</string>

    <!-- Strings for the Preferences -->
    <string name="pref_edittext_hint">Please enter your topics of interest</string>
    <!-- Notification preference-->
    <string name="pref_notification_title">Notifications for new events</string>
    <string name="pref_notification_label">Get notifications when there is new Meetup
        events matching your interests</string>
    <string name="pref_notification_key">notification-key</string>
    <!-- Location preference-->
    <string name="pref_location_title">Use current location</string>
    <string name="pref_location_label">Retrieve nearby Meetups groups or
        events by using your current location</string>
    <string name="pref_location_key" translatable="false">location-key</string>
    <!-- GitHub repository keyword search EditText -->
    <string name="pref_github_edittext_label">GitHub Search Keyword(s)</string>
    <string name="pref_github_edittext_key" translatable="false">github-search-keyword-key</string>
    <string name="pref_github_edittext_summary">Update the repository search
        keywords</string>
    <!-- GitHub repository sorting preference -->
    <string name="pref_github_sort_label">Sort By</string>
    <string name="pref_github_sort_summary">Modify the repository sorting</string>
    <string name="pref_github_sort_key" translatable="false">github-sort-by-key</string>
    <string name="pref_github_sort_default" translatable="false">@string/pref_github_sort_updated_value</string>
    <string name="pref_github_sort_updated_label">Last updated</string>
    <string name="pref_github_sort_updated_value" translatable="false">updated</string>
    <string name="pref_github_sort_stars_label">Stars count</string>
    <string name="pref_github_sort_stars_value" translatable="false">stars</string>
    <string name="pref_github_sort_forks_label">Forks count</string>
    <string name="pref_github_sort_forks_value" translatable="false">forks</string>
    <!-- GitHub repository order preference -->
    <string name="pref_github_order_label">Repository Order</string>
    <string name="pref_github_order_summary">Modify the repository display order</string>
    <string name="pref_github_order_key" translatable="false">github-order-key</string>
    <string name="pref_github_order_default" translatable="false">@string/pref_github_order_descending_value</string>
    <string name="pref_github_order_descending_label">Descending</string>
    <string name="pref_github_order_descending_value" translatable="false">descending</string>
    <string name="pref_github_order_ascending_label">Ascending</string>
    <string name="pref_github_order_ascending_value" translatable="false">ascending</string>
    <!-- Meetup events/groups keyword search EditText -->
    <string name="pref_meetup_edittext_label">Meetup Search Keyword(s)</string>
    <string name="pref_meetup_edittext_key" translatable="false">meetup-search-keyword-key</string>
    <string name="pref_meetup_edittext_summary">Update the Meetup search
        keywords</string>
    <!-- Meetup events/groups sorting preference -->
    <string name="pref_meetup_sort_label">Sort by</string>
    <string name="pref_meetup_sort_summary">Modify the events sorting</string>
    <string name="pref_meetup_sort_key" translatable="false">meetup-sort-by-key</string>
    <string name="pref_meetup_sort_default" translatable="false">@string/pref_meetup_sort_time_value</string>
    <string name="pref_meetup_sort_best_label">Recommendation</string>
    <string name="pref_meetup_sort_best_value" translatable="false">best</string>
    <string name="pref_meetup_sort_time_label">Time</string>
    <string name="pref_meetup_sort_time_value" translatable="false">time</string>

    <!-- Meetup events/groups location EditText -->
    <string name="pref_meetup_location_label">Meetup Location</string>
    <string name="pref_meetup_location_key" translatable="false">meetup-search-location-key</string>
    <string name="pref_meetup_location_summary">Manually update the location for events or
        groups</string>
    <string name="pref_location_hint">Please enter a city name</string>
    <string name="no_bookmarked_events_label">No bookmarked events</string>


    <!-- Strings for the Notifications -->
    <string name="notif_content_title">New Meetup events available</string>
    <string name="notif_content_text">There are new events related to your interests</string>
    <string name="notif_channel_title">Update</string>
    <string name="notif_big_text">Check out the details of the events as early as possible
        to be sure to have a place</string>
    <string name="notif_action_open">Check details now</string>
    <string name="notif_action_ignore">Later maybe</string>
    <string name="toast_notification_set_confirmation">Notifications set for this search</string>
    <string name="notification_snackbar_label">Set notifications for current search?</string>
    <string name="notification_snackbar_action">YES</string>

    <string name="github_error_message">An error occurred: repositories could not be retrieved
        .</string>
    <string name="meetup_groups_error_message">An error occurred: groups could not be retrieved
        .</string>
    <string name="meetup_events_error_message">An error occurred: events could not be
        retrieved.</string>
    <string name="meetup_details_error_message">An error occurred: the devent details could
    not be retrieved.</string>
    <string name="bookmarks_emptyview_message">You have not bookmarked any event yet.</string>
    <string name="no_search_set_emptyview_message">Set up a search first</string>

    <string name="admob_app_sample_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ads_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="bookmarks_ad_banner_onclick_message">Thank you for clicking on the ad!</string>

</resources>
