<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/meetup_dialog_layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/meetup_dialog_title"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/meetup_dialog_title"
        android:textAllCaps="true"
        android:textColor="@color/color_white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/meetup_dialog_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meetup_dialog_title" />

    <TextView
        android:id="@+id/meetup_dialog_textview_keywords_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/dialog_keyword_label"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/meetup_dialog_view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meetup_dialog_view" />

    <EditText
        android:id="@+id/meetup_dialog_edittext_keywords_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="@string/dialog_keyword_hint"
        android:hint="@string/dialog_keyword_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/meetup_dialog_guideline"
        app:layout_constraintTop_toBottomOf="@id/meetup_dialog_view" />

    <View
        android:id="@+id/meetup_dialog_view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meetup_dialog_edittext_keywords_input" />

    <TextView
        android:id="@+id/meetup_dialog_textview_sortby_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/dialog_sort_label"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/meetup_dialog_view3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meetup_dialog_view2" />

    <RadioGroup
        android:id="@+id/meetup_dialog_radiogroup_sortby"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/meetup_dialog_guideline"
        app:layout_constraintTop_toBottomOf="@id/meetup_dialog_view2">

        <RadioButton
            android:id="@+id/meetup_dialog_sortby_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/dialog_sort_time_label"
            android:textColor="@color/colorPrimary" />

        <RadioButton
            android:id="@+id/meetup_dialog_sortby_best"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_sort_best_label"
            android:textColor="@color/colorPrimary" />

    </RadioGroup>

    <View
        android:id="@+id/meetup_dialog_view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meetup_dialog_radiogroup_sortby" />

    <TextView
        android:id="@+id/meetup_dialog_textview_location_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:text="@string/dialog_location_label"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/meetup_dialog_textview_location_label2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meetup_dialog_view3" />

    <EditText
        android:id="@+id/meetup_dialog_edittext_location_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="@string/dialog_location_hint"
        android:hint="@string/dialog_location_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/meetup_dialog_guideline"
        app:layout_constraintTop_toBottomOf="@id/meetup_dialog_view3" />

    <TextView
        android:id="@+id/meetup_dialog_textview_location_label2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/dialog_location_explanation"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meetup_dialog_edittext_location_input" />

    <View
        android:id="@+id/meetup_dialog_view4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meetup_dialog_textview_location_label2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/meetup_dialog_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>